feat: add api doc sample
